Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 1, 2023


Added a Details arena (view) that shows information on 
each enemy type. Available by pressing Tab or Enter 
after choosing Help from the main menu. Press Tab or Enter 
to show the next page, or if you don't want to wait 
for the text to finish crawling. Some enemies don't 
have pictures (for now) because their appearance is composited 
from other textures, and no main texture is available.

Muchies come in different colors instead of always being green (arcade match).

Munchies don't materialize; instead are spawned by Phreds (arcade match).

Rescued humans (returned to ground) emit little hearts to
show their gratitude. The arcade game emitted score tips, 
but we don't show score or score tips.

Renamed UDefconPlayViewBase::SettlePlayer to KeepPlayerInView.

The background stars pan at half the speed of the 
foreground objects e.g. terrain. The Yllabian dogfight 
missions lack terrain so flying can seem slow, but 
it's what the original arcade game does.

Entering the stargate before mission end and without any 
human abductions in progress moves player ship to the 
other side of the planet (apparently this is what the 
original arcade game did -- the only way to teleport 
randomly was to use the Hyperspace button).

Laser beams use texture atlas that give disintegrating tail 
effect similar to arcade game.

Started work on invincibility powerup.

Removed all .cpp code related to unused IGameObject::GetClassname method.

Renamed PlayViewBase::FindHuman to FindNearestHuman.

Dropped explicit Const versions of some methods.

Renamed IGameObject::Move to Tick.

Play arena places the humans, and with a new "humans placed" flag 
in game instance, randomizes their x-positions on the first mission 
of a new game session.

Converted min/max pref vars to range vars, using the new 