@@ -2,8 +2,13 @@ Bug list for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-August 31, 2023
+September 2, 2023
 
+
+Terrain and stars overlap player ship and most enemy ships. 
+Could fix by using custom paint for everything or 
+making stars and terrain use widgets. Sadly, Slate rendering 
+happens before UUserWidget::NativePaint. 
 
 It seems that when humans are sometimes debarked by player ship, they actually are 
 above the terrain by a small amount and need to fall for a brief moment
